# wt-rpm

./: CMakeLists.txt  README  abstractrpm.cpp  abstractrpm.h  computerview.cpp  computerview.h  confparser.cpp  confparser.h  dummy_rpm.cpp  dummy_rpm.h  main.cpp  rasprpm.cpp  rasprpm.h  util.cpp  util.h  view.cpp  view.h
circuits/: README  rpm_computer_side.fzz  rpm_uc_side.fzz
circuits/C.H.I.P./: C.H.I.P.-cache.lib  C.H.I.P..cir  C.H.I.P..dsn  C.H.I.P..kicad_pcb  C.H.I.P..kicad_pcb-bak  C.H.I.P..net  C.H.I.P..pro  C.H.I.P..sch  C.H.I.P.xml
circuits/C.H.I.P./gerber/: C.H.I.P.-B.Cu.gbl  C.H.I.P.-B.Mask.gbs  C.H.I.P.-B.Paste.gbp  C.H.I.P.-B.SilkS.gbo  C.H.I.P.-Edge.Cuts.gm1  C.H.I.P.-F.Cu.gtl  C.H.I.P.-F.Mask.gts  C.H.I.P.-F.Paste.gtp  C.H.I.P.-F.SilkS.gto  C.H.I.P..drl
circuits/kikad/: rasp_side.cmp  rasp_side.kicad_pcb  rasp_side.lst  rasp_side.net  rasp_side.pro  rasp_side.sch
imgs/: licenses
scripts/: chip-backend.py  db.json
systemd/: README  wtrpm.service
